<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="S8TestDeviceID" /> ///
    <string name="Thanks">Thank You</string> //////
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string> ////
    <string name="_4">4</string> ///
    <string name="_5">5</string> ///
    <string name="_6">6</string> ///

    <string name="about_description">RoFitness is a workout app designed for men and women to learn new workouts and enhance mental and physical health in the comfort of your own home.</string>
    <string name="abs_workout_heading">Abs Workout</string>

    <string name="app_name">RoFitness</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string> ///
    <string name="are_you_sure_to_exit">Are you sure you want to exit this application?</string>

    <string name="bmiCalculator_status_normal">Healthy Weight</string>
    <string name="bmiCalculator_status_obese">Obese</string>

    <string name="bmiCalculator_status_moderately_obese">Moderately Obese</string>

    <string name="bmiCalculator_status_severely_obese">Severely Obese</string>

    <string name="bmiCalculator_status_very_severely_obese">Very Severely\nObese</string>


    <string name="bmiCalculator_status_overweight">Overweight</string>
    <string name="bmiCalculator_status_underWeight">Underweight</string>
    <string name="bmiCalculator_status_very_severely_underWeight">Very Severely\nUnderweight</string>

    <string name="bmiCalculator_status_severely_underWeight">Severely\nUnderweight</string>

    <string name="bmiInfoDialogue_bmi">Body Mass Index</string>
    <string name="bmiInfoDialogue_body">Body Mass Index (BMI) is a measure of body fat based on your weight in relation to your height.</string>
    <string name="bmiInfoDialogue_normalValue">18.51 - 24.99</string>

    <string name="bmiInfoDialogue_moderatelyobeseValue">30.01 - 34.93</string>
    <string name="bmiInfoDialogue_severelyobeseValue">35.23 - 39.77</string>
    <string name="bmiInfoDialogue_veryseverelyobeseValue">40.13 and Over\n</string>


    <string name="bmiInfoDialogue_overWeightValue">25.06 - 29.94</string>
    <string name="bmiInfoDialogue_title">What is BMI?</string>

    <string name="bmiInfoDialogue_veryseverelyunderWeightValue">14.84 and Under\n</string>
    <string name="bmiInfoDialogue_severelyunderWeightValue">15.95 - 15.06\n</string>
    <string name="bmiInfoDialogue_underWeightValue">16.07 - 18.27</string>


    <string name="bmiInfoDialogue_weightStatus">Weight Status</string>
    <string name="bmi_scale_primary_value">%1$d %2$s</string>
    <string name="bmi_scale_secondary_value_height">%1$d\'%2$d\"</string>
    <string name="bmi_scale_secondary_value_weight">%1$.2f kg</string>
    <string name="bmi_scale_unit_cm">cm</string>
    <string name="bmi_scale_unit_ponds">lbs</string>
    <string name="bmi_scale_unit_year">year</string>

    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string> /////

    <string name="btn_save_text">Save</string>
    <string name="btn_text_done">Complete</string>

    <string name="category_tag_programs">Programs</string>

    <string name="change_language_dialog_title">Select Language…</string>

    <string name="close">Close</string>

    <string name="company_name">Rohail Siddiqui</string>
    <string name="content_description">Image</string>

    <string name="day_activity_title">Day %1$d</string> ///
    <string name="default_language_name">English,Uk</string>

    <string name="dialog_neutral_button">Neutral</string> ///
    <string name="dialog_no_button">No</string> ///
    <string name="dialog_ok_button">Ok</string> ///
    <string name="dialog_yes_button">Yes</string> ///

    <string name="exercise_repetition_value">%1$s Sets - %2$s Reps</string> ///
    <string name="exit_app">Exit Application</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string> ///
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string> ///
    <string name="firebase_database_url">https://mensfitnessandroidapp.firebaseio.com</string> ///

    <string name="height_text">Height</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string> ///
    <string name="hint_age">Age</string>
    <string name="hint_name">Name</string>
    <string name="hint_text_name">Name</string>
    <string name="hint_text_zero">0</string>

    <string name="item_sub_workout_workout_repetition">%1$s Reps</string> ///

    <string name="menu">Menu</string>

    <string name="plan_percentage_completed">%1$d %%</string> ///
    <string name="prefs">Preferences</string>
    <string name="regular_plan_activity_title">Start\nMy Daily workout plan:</string> ///
    <string name="regular_plan_progress">%1$s %% Completed</string> ///
    <string name="reset_dialog_message">Are you sure you want to reset this Plan?</string>
    <string name="reset_dialog_positive_btn_text">Yes</string>
    <string name="reset_dialog_title">Confirm Reset</string>
    <string name="reset_progress_dialog_negative_btn_text">No</string>

    <string name="splash_screen_fitness_app">RoFitness</string> ///
    <string name="start_workout_workout_repetition">%1$s Reps</string> ///

    <string name="tap_second_msg">Track your body fat based on height and weight</string> ///
    <string name="textTransition">textTransition</string> ///
    <string name="text_about">About</string>
    <string name="text_about_small">About this app</string>

    <string name="text_adventure">ADVENTURE</string> ///
    <string name="text_age">Age</string>

    <string name="text_bmi">BMI</string>
    <string name="text_bmi_calculator">BMI Calculator</string>
    <string name="text_calculate_bmi">Calculate Your BMI</string>

    <string name="text_description">Description:</string>
    <string name="text_developed_by">Developed By:</string>
    <string name="text_exercise">Exercise</string>
    <string name="text_exercise_heading">Exercise:</string>

    <string name="text_got_it">Close</string>
    <string name="text_height">Height:</string>
    <string name="text_lets_start_workout">Start Workout</string>

    <string name="text_lower_abs">LOWER ABS</string> ///

    <string name="text_more">More</string>

    <string name="text_my_plans">My Plans</string>
    <string name="text_n_a">Please Enter</string>
    <string name="text_name">Name</string>

    <string name="text_or">OR</string> ///
    <string name="text_percentage_completed">% Completed</string>

    <string name="text_profile">Profile</string>
    <string name="text_progress">MY PROGRESS</string>
    <string name="text_progress_completed_target_muscle_header">%1$s%% Completed</string>

    <string name="text_remove_photo">Remove Photo</string>
    <string name="text_repetition">Repetition:</string>
    <string name="text_scale">Scale:</string>
    <string name="text_select_language">Select Language</string>
    <string name="text_settings">Settings</string>
    <string name="text_setup_profile">Setup Profile</string>

    <string name="text_start">START</string> ///

    <string name="text_upload_photo">Upload Photo</string>
    <string name="text_upper_abs">UPPER ABS</string>

    <string name="text_view_photo">View Photo</string>
    <string name="text_weight">Weight:</string>

    <string name="text_workout">Workout:</string>
    <string name="text_workouts">WORKOUTS</string>
    <string name="text_your">YOUR</string>
    <string name="text_your_bmi_is">Your BMI =</string>

    <string name="transitionName">logoImg</string> ///
    <string name="version_number">1.1</string> ///

    <string name="viewKonfetti_dialog_positive_btn_text">OK</string> ///

    <string name="waist_text">Waist</string>

    <string name="weight_text">Weight</string>
    <string name="workout_tag_message">%1$d %2$s</string>
    <string name="text_working_day_left">%d</string>
    <string name="text_working_days_left">%d</string>
</resources>