<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#376287"
    android:orientation="vertical"
    android:weightSum="10.0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="4.0dip"
        android:layout_weight="8.4">

        <!--
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_status_bar"
            android:background="@color/colorWhite" /> -->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_aboutActivity_appBar"
            android:layout_width="fill_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="@dimen/height_status_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/all_backarrow_black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_about"
                android:textColor="#B6C3CA"
                android:textSize="23.0sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.6"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.0dip"
                android:layout_marginBottom="8.0dip"
                android:text="@string/text_developed_by"
                android:textColor="#B6D8F3"
                android:textSize="15.0sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textColor="#B6D8F3"
                android:textSize="15.0sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28.0dip">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="140.0dip"
                android:layout_height="140.0dip"
                android:layout_marginStart="8.0dip"
                android:layout_marginTop="8.0dip"
                android:layout_marginEnd="8.0dip"
                android:layout_marginBottom="8.0dip"
                android:contentDescription="@string/content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.106"
                app:srcCompat="@drawable/all_app_logo" />

            <TextView
                android:id="@+id/textviewCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTheme"
                android:textSize="15.0sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="247dp"
                tools:layout_editor_absoluteY="222dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:layout_marginTop="50.0dip"
            android:layout_marginBottom="5.0dip"
            android:padding="25.0dip"
            android:text="@string/about_description"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>